feat: add GitHub Actions deployment workflow
Created comprehensive deployment workflow following ERP UI pattern:

1. Workflow Trigger:
   - Runs on push to main/master branches
   - Uses same DevOps tools action as ERP apps

2. Deployment Configuration:
   - NAMESPACE: truload
   - ENV_SECRET_NAME: truload-frontend-env
   - VALUES_FILE_PATH: apps/truload-frontend/values.yaml
   - Shared registry: docker.io/codevertex

3. Build Args for Next.js:
   - NEXT_PUBLIC_API_URL: https://truloadapitest.masterspace.co.ke
   - NEXT_PUBLIC_WS_URL: wss://truloadapitest.masterspace.co.ke/ws
   - Baked into Docker image at build time

4. Deployment Steps:
   - Build Next.js Docker image (with API URL build args)
   - Push to registry
   - Update devops-k8s Helm values
   - ArgoCD auto-syncs with:
     * SSL certificate (truload-frontend-tls)
     * HPA (2-4 replicas)
     * VPA (auto-scaling resources)
     * Monitoring (via Prometheus)

5. Health Check:
   - Deployment: truload-frontend-app
   - Health endpoint: / (checks for HTML)
   - Domain: truloadtest.masterspace.co.ke

ArgoCD will automatically:
  - Create deployment in truload namespace
  - Configure TLS certificate via cert-manager
  - Enable HPA and VPA (from values.yaml)
  - Add to monitoring (Prometheus ServiceMonitor)

Uses shared GitHub secrets (org-level) with ERP apps

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,7 +2,7 @@ name: Build and Deploy TruLoad Frontend
 
 on:
   push:
-    branches: [ main ]
+    branches: [ main, master ]
 
 jobs:
   deploy:
@@ -25,33 +25,28 @@ jobs:
       run: |
         echo "Checking which tokens are available..."
         [[ -n "${{ secrets.GH_PAT }}" ]] && echo "✅ GH_PAT is set" || echo "❌ GH_PAT not found"
-        [[ -n "${{ secrets.GITHUB_SECRET }}" ]] && echo "✅ GITHUB_SECRET is set" || echo "❌ GITHUB_SECRET not found"
-        [[ -n "${{ secrets.GITHUB_TOKEN }}" ]] && echo "✅ GITHUB_TOKEN is set (default, may lack cross-repo write)" || echo "❌ GITHUB_TOKEN not found"
-        echo "Note: At least GH_PAT or GITHUB_SECRET must be set for cross-repo push to devops-k8s"
+        [[ -n "${{ secrets.GIT_SECRET }}" ]] && echo "✅ GITHUB_SECRET is set" || echo "❌ GITHUB_SECRET not found"
+        [[ -n "${{ secrets.GITHUB_TOKEN }}" ]] && echo "✅ GITHUB_TOKEN is set (default)" || echo "❌ GITHUB_TOKEN not found"
 
     - name: Set deployment variables
       run: |
         echo "DEPLOY=true" >> $GITHUB_ENV
         echo "SETUP_DATABASES=false" >> $GITHUB_ENV
-        echo "DB_TYPES=postgres,redis" >> $GITHUB_ENV
         echo "NAMESPACE=truload" >> $GITHUB_ENV
         echo "ENV_SECRET_NAME=truload-frontend-env" >> $GITHUB_ENV
         echo "REGISTRY_SERVER=docker.io" >> $GITHUB_ENV
         echo "REGISTRY_NAMESPACE=codevertex" >> $GITHUB_ENV
         echo "VALUES_FILE_PATH=apps/truload-frontend/values.yaml" >> $GITHUB_ENV
-        echo "DEPLOYMENT_SUMMARY_TITLE=TruLoad Frontend Deployment Summary" >> $GITHUB_ENV
-        echo "DEPLOYMENT_SUCCESS_MESSAGE=TruLoad Frontend deployment completed! The UI should be accessible via the URLs above." >> $GITHUB_ENV
-        echo "APPLICATION_DISPLAY_NAME=TruLoad Frontend" >> $GITHUB_ENV
-        echo "NEXT_PUBLIC_API_URL=https://api.truload.example.com" >> $GITHUB_ENV
-        echo "NEXT_PUBLIC_WS_URL=wss://api.truload.example.com/ws" >> $GITHUB_ENV
+        echo "APP_NAME=truload-frontend" >> $GITHUB_ENV
+        echo "NEXT_PUBLIC_API_URL=https://truloadapitest.masterspace.co.ke" >> $GITHUB_ENV
+        echo "NEXT_PUBLIC_WS_URL=wss://truloadapitest.masterspace.co.ke/ws" >> $GITHUB_ENV
 
     - name: Run production deployment
       env:
-        DOCKER_SSH_KEY: ${{ secrets.DOCKER_SSH_KEY }}
         KUBE_CONFIG: ${{ secrets.KUBE_CONFIG }}
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         GH_PAT: ${{ secrets.GH_PAT }}
-        GITHUB_SECRET: ${{ secrets.GITHUB_SECRET }}
+        GITHUB_SECRET: ${{ secrets.GIT_SECRET }}
         REGISTRY_USERNAME: ${{ secrets.REGISTRY_USERNAME }}
         REGISTRY_PASSWORD: ${{ secrets.REGISTRY_PASSWORD }}
         GITHUB_SHA: ${{ github.sha }}
@@ -62,26 +57,12 @@ jobs:
         REGISTRY_SERVER: docker.io
         REGISTRY_NAMESPACE: codevertex
         VALUES_FILE_PATH: apps/truload-frontend/values.yaml
-        GIT_USER: ${{ secrets.GIT_USER }}
-        GIT_EMAIL: ${{ secrets.GIT_EMAIL }}
-        # Next.js build-time environment variables for API configuration
-        NEXT_PUBLIC_API_URL: https://api.truload.example.com
-        NEXT_PUBLIC_WS_URL: wss://api.truload.example.com/ws
-        # SSH deployment variables
-        SSH_HOST: ${{ secrets.SSH_HOST }}
-        SSH_USER: ${{ secrets.SSH_USER }}
-        SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
-        PROVIDER: contabo
-        CONTABO_API: true
-        # Contabo secrets
-        CONTABO_CLIENT_ID: ${{ secrets.CONTABO_CLIENT_ID }}
-        CONTABO_CLIENT_SECRET: ${{ secrets.CONTABO_CLIENT_SECRET }}
-        CONTABO_API_USERNAME: ${{ secrets.CONTABO_API_USERNAME }}
-        CONTABO_API_PASSWORD: ${{ secrets.CONTABO_API_PASSWORD }}
-        # Deployment variables
-        DEPLOYMENT_SUMMARY_TITLE: TruLoad Frontend Deployment Summary
-        DEPLOYMENT_SUCCESS_MESSAGE: TruLoad Frontend deployment completed!
-        APPLICATION_DISPLAY_NAME: TruLoad Frontend
+        APP_NAME: truload-frontend
+        GIT_USER: ${{ secrets.GIT_USER || 'TruLoad Bot' }}
+        GIT_EMAIL: ${{ secrets.GIT_EMAIL || 'dev@truload.io' }}
+        # Build args for Next.js
+        NEXT_PUBLIC_API_URL: https://truloadapitest.masterspace.co.ke
+        NEXT_PUBLIC_WS_URL: wss://truloadapitest.masterspace.co.ke/ws
       run: |
         chmod +x build.sh
         ./build.sh
@@ -97,10 +78,46 @@ jobs:
         : "${REGISTRY_NAMESPACE:=codevertex}"
         IMAGE_REPO="${REGISTRY_SERVER}/${REGISTRY_NAMESPACE}/truload-frontend"
         SHORT_SHA=${GITHUB_SHA::8}
-        echo "Tagging ${IMAGE_REPO}:${SHORT_SHA} as :latest and pushing"
+        echo "Tagging ${IMAGE_REPO}:${SHORT_SHA} as :latest"
         echo "$REGISTRY_PASSWORD" | docker login "$REGISTRY_SERVER" -u "$REGISTRY_USERNAME" --password-stdin
         docker pull "${IMAGE_REPO}:${SHORT_SHA}" || true
         docker tag "${IMAGE_REPO}:${SHORT_SHA}" "${IMAGE_REPO}:latest"
         docker push "${IMAGE_REPO}:latest"
 
+    - name: Verify UI health
+      if: success()
+      env:
+        KUBE_CONFIG_B64: ${{ secrets.KUBE_CONFIG }}
+        NS: truload
+      run: |
+        if [ -z "${KUBE_CONFIG_B64}" ]; then
+          echo "⏭️ Skipping health check - no KUBE_CONFIG available"
+          exit 0
+        fi
 
+        echo "::group::Health check"
+        mkdir -p ~/.kube
+        echo "$KUBE_CONFIG_B64" | base64 -d > ~/.kube/config
+
+        # Ensure deployment is rolled out
+        kubectl rollout status deployment/truload-frontend-app -n ${NS} --timeout=300s
+
+        # Try ingress health endpoint
+        HOSTS=$(kubectl get ingress -n ${NS} -o jsonpath='{.items[*].spec.rules[*].host}' | tr ' ' '\n' | grep -E '^truloadtest' || true)
+        if [ -n "$HOSTS" ]; then
+          STATUS=1
+          for H in $HOSTS; do
+            echo "Checking https://$H/ ..."
+            if curl -sk --max-time 10 "https://$H/" | grep -Ei "truload|<!DOCTYPE html>" >/dev/null; then
+              echo "✅ Health OK for $H"
+              STATUS=0
+              break
+            fi
+          done
+          if [ $STATUS -ne 0 ]; then
+            echo "⚠️ Health endpoint did not return expected content; rollout completed but may still be initializing"
+          fi
+        else
+          echo "No ingress host found; skipping external health probe"
+        fi
+        echo "::endgroup::"
