--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -44,7 +44,8 @@ jobs:
     - name: Run production deployment
       env:
         KUBE_CONFIG: ${{ secrets.KUBE_CONFIG }}
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        # Use GH token for HTTPS auth in build.sh
+        GIT_TOKEN: ${{ secrets.GIT_TOKEN }}
         GH_PAT: ${{ secrets.GH_PAT }}
         GITHUB_SECRET: ${{ secrets.GIT_SECRET }}
         REGISTRY_USERNAME: ${{ secrets.REGISTRY_USERNAME }}
@@ -65,6 +66,11 @@ jobs:
         NEXT_PUBLIC_WS_URL: wss://truloadapitest.masterspace.co.ke/ws
       run: |
         chmod +x build.sh
+        # Export environment variables for build.sh
+        export NEXT_PUBLIC_API_URL="${NEXT_PUBLIC_API_URL}"
+        export NEXT_PUBLIC_WS_URL="${NEXT_PUBLIC_WS_URL}"
+        export NAMESPACE="${NAMESPACE}"
+        export APP_NAME="${APP_NAME}"
         ./build.sh
 
     - name: Tag and push :latest
