--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.53.0",
+    "recharts": "^3.5.1",
     "sonner": "^1.7.1",
     "tailwind-merge": "^2.5.4",
     "zod": "^3.23.8",
@@ -52,6 +53,7 @@
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.0.1",
     "@testing-library/user-event": "^14.5.2",
+    "@types/minimatch": "^6.0.0",
     "@types/node": "^22.8.7",
     "@types/react": "^19.0.0",
     "@types/react-dom": "^19.0.0",
